[package]
name = "kobe-client"
description = "Rust client library for Kobe APIs"
version = "0.1.5"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/aoikurokawa/kobe-client"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
solana-pubkey = { version = "3.0.0", features = ["serde"] }
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["time", "macros", "rt-multi-thread"] }
